--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node app.js"
+    "dev": "node app.mjs"
   },
   "author": "Waqas Ahmed",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.7",
     "read-excel-file": "^5.7.1"
